--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RiiCODE - Portofolio </title>
+    <title>Askall Portofolio </title>
     <meta name="description" content="Portofolio profesional bertema  milik RiiCODE yang menampilkan proyek inovatif, keahlian teknis, dan pengalaman digital.">
     <meta property="og:title" content="RiiCODE - Portofolio ">
     <meta property="og:description" content="Masuki dunia digital portofolio RiiCODE untuk menjelajahi proyek-proyek canggih, keahlian teknis, dan latar belakang profesional.">
